--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
+    <header>
+        <h1>RANDOMLY GENERATED IMAGES</h1>
+    </header>
 <main>
     <ul>
 
