--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
     <header>
-        <h1>RANDOMLY GENERATED IMAGES</h1>
+        <h1>Wallpaper of the Day</h1>
     </header>
+
 <main>
     <ul>
 
-</ul>
+    </ul>
 </main>
 
+<div class="modal">
+
+</div>
 
     <script src="main.js"></script>
 </body>
